@startuml

interface Construccion {
  + producir(Recurso): void
  + cobrar(Inventario): void
  + tieneDePropietarioA(Jugador): void
  + ocupar(): void
  + puntosVictoria(): int
  + aplicarCambio(Jugador, EspacioConstruible): void
  + getIdPropietario(): int
}

class Carretera {
  - propietario: Jugador
  - costo: List<Recurso>
  
  + producir(Recurso): void
  + tieneDePropietarioA(Jugador): void
  + cobrar(Inventario): void
  + ocupar(): void
  + puntosVictoria(): int
  + aplicarCambio(Jugador, EspacioConstruible): void
  + getIdPropietario(): int
}

class Poblado {
  - propietario: Jugador
  - costo: List<Recurso>
  
  + producir(Recurso): void
  + tieneDePropietarioA(Jugador): void
  + cobrar(Inventario): void
  + ocupar(): void
  + puntosVictoria(): int
  + aplicarCambio(Jugador, EspacioConstruible): void
  + aplicarCambioPrimerasColocaciones(Jugador, Vertice): void
  + getIdPropietario(): int
}

class Ciudad {
  - propietario: Jugador
  - costo: List<Recurso>
  
  + producir(Recurso): void
  + tieneDePropietarioA(Jugador): void
  + cobrar(Inventario): void
  + ocupar(): void
  + puntosVictoria(): int
  + aplicarCambio(Jugador, EspacioConstruible): void
  + getIdPropietario(): int
}

class NullConstruccion {
  + tieneDePropietarioA(Jugador): void
  + cobrar(Inventario): void
  + producir(Recurso): void
  + ocupar(): void
  + puntosVictoria(): int
  + aplicarCambio(Jugador, EspacioConstruible): void
  + getIdPropietario(): int
}


Construccion <|.. Carretera
Construccion <|.. Poblado
Construccion <|.. Ciudad
Construccion <|.. NullConstruccion


Carretera --> Jugador : propietario
Poblado --> Jugador : propietario
Ciudad --> Jugador : propietario


Recurso <-- Construccion :costo
Inventario <-- Construccion

@enduml